percentage forumula added/diseases dropdown added

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -8,13 +8,13 @@
 
 #rightbar{
     background-color: #FFB74D;
-    height: 100%;
+    min-height: 100%;
     max-width:19vw;
     transition : 300ms ease;
 }
 #leftbar{
     background-color: #FFB74D;
-    height: 100%;
+    min-height: 100%;
     max-width:19vw;
     transition : 300ms ease;
 }
