diseases dropdown updated/ header updated/ theme updated

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,22 +1,25 @@
 #headerapp {
-    font-size: 30px;
+    font-size: 25px;
     font-family: "Roboto";
-    background-color: #FF9100;
+    background-color:white;
+    border-bottom: 2px solid rgb(39, 102, 150);
     color: black;
 }
 
 #rightbar {
-    background-color: #FFB74D;
+    background-color: rgb(39, 102, 150);
     min-height: 100%;
+    // border-left: 2px solid lightgray;
     max-width: 19vw;
-    transition: 300ms ease;
+    transition: 500ms ease;
 }
 
 #leftbar {
-    background-color: #FFB74D;
+    background-color: rgb(39, 102, 150);
+    // border-right:2px solid lightgray;
     min-height: 100%;
     max-width: 19vw;
-    transition: 300ms ease;
+    transition: 500ms ease;
 }
 
 #center-container {
@@ -31,17 +34,17 @@
 }
 
 #rightbar-icon {
-    padding: 30px 15px;
-    font-size: 36px !important;
+    padding: 12;
+    font-size: 26px;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 
 #leftbar-icon {
-    padding: 30px 15px;
-    font-size: 36px !important;
+    padding: 12;
+    font-size: 26px;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 
 .rightbar-menu {
@@ -51,10 +54,11 @@
     min-width: 18vw;
     margin: 0.5rem;
     border-radius: 20px;
+    border: 1px solid lightgray;
 }
 
 .collapse-div {
-    max-width: 4vw !important;
+    max-width: 3.5vw !important;
 
     .rightbar-menu-main {
         display: none;
