--- a/src/assets/scss/loader.scss
+++ b/src/assets/scss/loader.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 40%;
   left: calc(50% - 10px);
-  background-color: #6d7fcc ;
+  background-color: rgb(39, 102, 150) ;
   animation: squaremove 2s ease-in-out infinite;
 }
 
