fixed age filter hide issue/fixed on load app

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -124,3 +124,14 @@
     // height:100% !important;
     width: 100% !important;
 }
+// .fixed-right{
+//     position: fixed;
+//     right:0;
+//     z-index:999;
+// }
+
+// .fixed-left{
+//     position: fixed;
+//     left:0;
+//     z-index:999;
+// }
