--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -119,19 +119,11 @@
 
 .selected-xaxis{
     font-weight: bold;
+    font-size: 13px;
+    color:black;
 }
 .highcharts-root{
     // height:100% !important;
     width: 100% !important;
 }
-// .fixed-right{
-//     position: fixed;
-//     right:0;
-//     z-index:999;
-// }
-
-// .fixed-left{
-//     position: fixed;
-//     left:0;
-//     z-index:999;
-// }
+// 
