--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -83,10 +83,10 @@
     margin: 0.2rem;
 }
 
-#btnSite,
-#btnLocation {
-    display: none;
-}
+// #btnSite,
+// #btnLocation {
+//     display: none;
+// }
 
 .hidediv {
     display: none;
