--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,8 @@
     transition : 300ms ease;
 }
 #center-container{
-    height: 100%;   
+    height: 100%;
+    font-size: 1.2em !important;   
 }
 
 .div-content{
